--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "formik": "^2.4.5",
+        "framer-motion": "^11.0.3",
         "jwt-decode": "^4.0.0",
         "lottie-react": "^2.4.0",
         "react": "^18.2.0",
