--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "jwt-decode": "^4.0.0",
         "lottie-react": "^2.4.0",
         "react": "^18.2.0",
+        "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.11.0",
         "react-router-dom": "^6.16.0",
+        "timeago-react": "^3.0.6",
         "yup": "^1.3.3"
     },
     "devDependencies": {
