--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.18",
         "formik": "^2.4.5",
         "framer-motion": "^11.0.3",
         "jwt-decode": "^4.0.0",
         "lottie-react": "^2.4.0",
+        "openai": "^4.26.0",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
